checkpoint: TS frontend, home page redesign, bond data, news routing
State right before TypeScript→JavaScript conversion. Includes:
- News page redesigned as home with hero, quick links, sidebar
- Auth-aware UI: anonymous browsing, login/register buttons, gated routes
- Topbar/Sidebar conditional rendering by keycloak.authenticated
- Refined dark/light theme (slate + emerald), responsive media queries
- Keycloak login theme polish (CSS + FTL)
- TCMB EVDS3 bond integration (cookie auth, historical yield curve)
- Bond UI: source badges, history chart populated from policy rate
- News → /news/:id route, image placeholders removed
- 1G cross-market comparison fix, intraday timeFormatter Invalid Date fix
- Portfolio chart TRY conversion, race condition cancellation
- Keycloak onLoad removed (no auto-redirect for anonymous)
- nginx index.html no-cache for bundle hash freshness